<resources>
    <string name="app_name">OFB</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="GPSAlertDialogTitle">GPS Alert Dialog Title</string>
    <string name="GPSAlertDialogMessage">GPS Alert Dialog Message</string>
    <string name="cancel">Cancel</string>
    <string name="birthdate_hint">BirthDate</string>
    <string name="done_name">Done</string>
    <string name="gender_hint">Gender - m/f</string>
    <string name="phone_hint">Phone</string>
    <string name="postalcode_hint">Postal Code</string>
    <string name="country_hint">Country</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="address1_hint">Address 1</string>
    <string name="address2_hint">Address 2</string>
    <string name="email_hint">Email Address</string>
    <string name="skills_hint">Your, Skills,</string>
    <string name="bio_hint">Bio</string>
    <string name="lastname_hint">Last Name</string>
    <string name="firstname_hint">First Name</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="default_title">Title</string>
    <string name="lead_by">Lead By:</string>
    <string name="default_leader">No Leader!</string>
    <string name="start_time">Start time:</string>
    <string name="default_time">Unknown</string>
    <string name="end_time">End Time:</string>
    <string name="default_status">Status</string>
    <string name="join_event">Join Event</string>
    <string name="action1_text">Join Event</string>
    <string name="action2_text">Lead Event</string>
    <string name="map_view">Map View</string>
    <string name="default_name">Name</string>
    <string name="default_phone">Phone</string>
    <string name="default_email">Email</string>
    <string name="default_skills">Skills</string>
    <string name="default_address">Address</string>
    <string name="default_church">Church</string>
    <string name="default_bio">Biography</string>
    <string name="login_button">Login</string>
    <string name="change_picture">Change Picture</string>
    <string name="quote_description">Bio quote</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="title_activity_churches">Churches</string>
    <string name="church_name_hint">Church Name</string>
    <string name="church_phone_hint">Church\'s phone#</string>
    <string name="church_email">Church\'s email</string>
    <string name="church_email_hint">Church\'s email</string>
    <string name="church_website_hint">Church\'s website</string>
    <string name="pastor_name_hint">Pastor\'s first and last name</string>
    <string name="pastor_phone_hint">Pastor\'s phone#</string>
    <string name="pastor_email_hint">Pastor\'s email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>
</resources>
