<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/account_ab"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_ab"
        android:paddingStart="@dimen/account_padding_left"

        android:paddingEnd="@dimen/account_padding_right">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="300dp"
                android:orientation="vertical">

                <EditText
                    android:layout_width="fill_parent"
                    android:hint="@string/firstname_hint"
                    android:inputType="textPersonName"
                    style="@style/TextFieldStyle"
                    android:id="@+id/account_fname"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:hint="@string/lastname_hint"
                    android:inputType="textPersonName"
                    style="@style/TextFieldStyle"
                    android:id="@+id/account_lname"/>

                <EditText
                    android:layout_width="fill_parent"
                    style="@style/TextFieldStyle"
                    android:hint="@string/bio_hint"
                    android:id="@+id/account_bio"/>
                    <EditText
                        android:layout_width="fill_parent"
                        style="@style/TextFieldStyle"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_hint"
                        android:id="@+id/account_email"/>

                    <EditText
                        android:layout_width="fill_parent"
                        style="@style/TextFieldStyle"
                        android:hint="@string/skills_hint"
                        android:id="@+id/account_skills"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:hint="@string/address1_hint"
                    style="@style/TextFieldStyle"
                    android:id="@+id/account_address1"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:hint="@string/address2_hint"
                    style="@style/TextFieldStyle"
                    android:id="@+id/account_address2"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:hint="@string/city_hint"
                    style="@style/TextFieldStyle"
                    android:id="@+id/account_city"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:hint="@string/state_hint"
                    style="@style/TextFieldStyle"
                    android:id="@+id/account_state"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:hint="@string/country_hint"
                    style="@style/TextFieldStyle"
                    android:id="@+id/account_country"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:hint="@string/postalcode_hint"
                    style="@style/TextFieldStyle"
                    android:id="@+id/account_postal"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"
                    style="@style/TextFieldStyle"
                    android:id="@+id/account_phone"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:hint="@string/gender_hint"
                    style="@style/TextFieldStyle"
                    android:id="@+id/account_gender"/>

                <EditText
                    android:layout_width="fill_parent"
                    style="@style/TextFieldStyle"
                    android:hint="@string/birthdate_hint"
                    android:inputType="date"
                    android:id="@+id/account_birthdate"/>
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/done_name"
                        style="@style/ButtonStyle"
                        android:layout_marginTop="@dimen/account_done_margin_top"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/account_done"/>
                    </RelativeLayout>


            </LinearLayout>


        </ScrollView>

</RelativeLayout>