<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agible.ofb.events.EventDetails$DetailsFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/event_details_ab"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_below="@id/event_details_ab">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
    <TextView
      style="@style/TextViewStyle"
        android:text="@string/default_title"
        android:id="@+id/event_details_title"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:id="@+id/event_details_leader_parent"
        android:layout_below="@id/event_details_title"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/lead_by"
            android:layout_alignParentStart="true"/>

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/default_leader"
            android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    <TextView
        style="@style/TextViewStyle"
        android:id="@+id/event_details_address"
        android:layout_below="@id/event_details_leader_parent"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_details_time_parent"
        android:layout_below="@id/event_details_address">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/start_time"
            android:layout_alignParentStart="true"
            android:id="@+id/event_details_start"/>
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/default_time"
            android:layout_toEndOf="@id/event_details_start"
            android:id="@+id/event_details_start_time"/>

        <TextView
            style="@style/TextViewStyle"
            android:layout_alignParentEnd="true"
            android:text="@string/default_time"
            android:id="@+id/event_details_end"/>

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/end_time"
            android:id="@+id/event_details_end_time"
            android:layout_toStartOf="@+id/event_details_end"/>



        </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/event_details_action_parent"
        android:layout_below="@id/event_details_time_parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/action1_text"
            android:id="@+id/event_details_action1"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/action2_text"
            android:id="@+id/event_details_action2"
            android:layout_weight="1"/>

        </LinearLayout>
    <TextView
        style="@style/TextViewStyle"
        android:layout_below="@id/event_details_action_parent"
        android:id="@+id/event_details_status"
        android:text="@string/default_status"/>

    <TextView
        style="@style/TextViewStyle"
        android:id="@+id/event_details_map_text"
        android:layout_below="@id/event_details_status"
        android:text="@string/map_view"/>

    <!--<com.google.android.gms.maps.MapView android:id="@+id/event_details_map_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_below="@id/event_details_map_text"-->
        <!--android:layout_height="wrap_content" />-->
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
